Geometry nodes: Inverted socket do not output correct part of geometry #94707

Closed
opened 2022-01-07 06:30:42 +01:00 by Vyacheslav Kobozev · 9 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-05 22:15, hash: 1d9bac7d92
Caused by 3e92b4ed24

Short Description
Inverted socket do not output correct part of geometry
Check the file and inverted part. It returns full mesh instead part of it.

Steps to Reproduce

  • Open .blend file
  • Connect Inverted socket to Group output
    Separate.blend

2022-01-07_08-24-52.mp4

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-05 22:15, hash: `1d9bac7d92` Caused by 3e92b4ed24 **Short Description** Inverted socket do not output correct part of geometry Check the file and inverted part. It returns full mesh instead part of it. **Steps to Reproduce** - Open .blend file - Connect `Inverted` socket to Group output [Separate.blend](https://archive.blender.org/developer/F12792507/Separate.blend) [2022-01-07_08-24-52.mp4](https://archive.blender.org/developer/F12792508/2022-01-07_08-24-52.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach

#94721 was marked as duplicate of this issue

#94721 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Bisecting points me to this commit: 3e92b4ed24

cc @JacquesLucke

Bisecting points me to this commit: 3e92b4ed24 cc @JacquesLucke
Pratik Borhade changed title from Geometry nodes. Separate geometry node. Inverted socket do not output correct part of geometry to Geometry nodes: Inverted socket do not output correct part of geometry 2022-01-07 07:51:12 +01:00

This issue was referenced by 6c906b7c21

This issue was referenced by 6c906b7c219f3fdf9489856de03d0124e854c982
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-01-07 08:11:43 +01:00
Member

Added subscriber: @Michael-Schiemer

Added subscriber: @Michael-Schiemer
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94707
No description provided.