Fix T94707: inverted output of separate geometry node incorrect

This was an oversight in rB3e92b4ed2408eacd126c0.